Updated FeatureIDE Installation and Update (markdown)